add linking products to apikey api
